--- a/configs/model_config.json
+++ b/configs/model_config.json
@@ -23,5 +23,6 @@
     "reconstruction_weight": 1.0,
     "regularization_weight": 0.01,
     "num_layers": 3,
-    "num_epochs": 100
+    "num_epochs": 100,
+    "data_path": "../250313/Data/"
 } 
