--- a/configs/model_config.json
+++ b/configs/model_config.json
@@ -19,11 +19,12 @@
         "min_lr": 0.0001,
         "eps": 1e-8
     },
+    "batch_size": 1024,
     "device": "cuda",
     "reconstruction_weight": 1.0,
     "regularization_weight": 0.01,
     "lambda_reg": 0.01,
-    "num_layers": 3,
-    "num_epochs": 100,
+    "num_layers": 10,
+    "num_epochs": 1024,
     "data_path": "../250313/Data/"
 } 
