--- a/configs/model_config.json
+++ b/configs/model_config.json
@@ -5,7 +5,7 @@
     "activation_function": "relu",
     "optimizer": "adamw",
     "optimizer_params": {
-        "lr": 0.001,
+        "lr": 1e-3,
         "betas": [0.9, 0.999],
         "eps": 1e-8,
         "weight_decay": 0.0001
@@ -16,7 +16,7 @@
         "factor": 0.1,
         "patience": 10,
         "threshold": 1e-4,
-        "min_lr": 0.0001,
+        "min_lr": 1e-5,
         "eps": 1e-8
     },
     "batch_size": 1024,
